# crewai_deploy

./: .gitignore  README.md  pyproject.toml
relatorio_pesquisa/: README.md  pyproject.toml
relatorio_pesquisa/src/relatorio_pesquisa/output/: report.md
