[project]
name = "relatorio_pesquisa"
version = "0.1.0"
description = "relatorio_pesquisa using crewAI"
authors = [{ name = "Lucas Andrade", email = "msesobreira481@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.157.0,<1.0.0"
]

[project.scripts]
relatorio_pesquisa = "relatorio_pesquisa.main:run"
run_crew = "relatorio_pesquisa.main:run"
train = "relatorio_pesquisa.main:train"
replay = "relatorio_pesquisa.main:replay"
test = "relatorio_pesquisa.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/relatorio_pesquisa"]

[tool.crewai]
type = "crew"
